# codeBits

./: README.md  cheaderSTD.txt
changelog-template/: README.md  changelog.html  changelog.org
cmake-template/: CMakeLists.txt  Doxyfile.cmake  IncludeProjNameLib.cmake  configure.sh  include_doxygen-targets.cmake  include_gtest.cmake  readme.org  update_configure_sh.sh
doxygen/: Doxyfile  Doxyfile.cmake
fortran/setup_fortran_gmake/: setup_fortran.mk  tools_flang.mk  tools_gfortran.mk  tools_ifx.mk  tools_lfortran.mk  tools_nvfortran.mk
licenseFiles/: default.txt  gpl3.txt  mjr-foss.txt  simple.txt
templates/: body-template-f90.txt  makefile  template.c  template.f  template.f03  template.f18  template.f77  template.f90  template.f95  template.html  template.java  template.m  template.make  template.md  template.org  template.sub  template.xhtml  top-template-F.txt  top-template-c.txt  top-template-cpp.txt  top-template-f77.txt  top-template-f90.txt  top-template-fixedF.txt  top-template-html.txt  top-template-perc-slim.txt  top-template-perc.txt  top-template-pound.txt  top-template-semi.txt  top-template-star.txt  top-template-tex.txt  top.R  top.bash  top.c  top.cc  top.cir  top.clisp  top.cmake  top.cpp  top.el  top.elisp  (+35 more)
